Adlan To-Do List finish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adlan To-Do List</title>
+    <title>Adlan To-Do List test</title>
     <link rel="icon" type="image/x-icon" href="img/adlnwlf v2.png">
 
     <link rel="stylesheet" href="style.css">
