--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             font-size: 10px;
             margin-bottom: 0px;
             margin-top: 10px;
-        ">Updated 7/26/25 5:30PM</p>
+        ">Updated by adlan at 7/26/25 5:30PM</p>
 
     </div>
 
