--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <img class="logoadlan" src="img/adlanlogo.png" alt="">
 
         <div class="top-row">
-            <input type="text" id="display1" placeholder="Add ur fuckin todo.." disabled />
-            <input type="text" id="display2" placeholder="MM/DD/YYYY" disabled />
+            <input type="text" id="display1" placeholder="Add ur fuckin todo.." />
+            <input type="time" id="display2" placeholder="MM/DD/YYYY" />
             <button class="tombol plus">+</button>
         </div>
 
