--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <thead>
             <tr>
             <th>TASK</th>
-            <th>DUE DATE</th>
+            <th>DUE_DATE</th>
             <th>STATUS</th>
             <th>ACTIONS</th>
             </tr>
